added the first blog

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+<h1>ramesh das</h1>
+<p>
+    kopidlskoiyeuidk;safjhzdj;laurikr;lsir8iewlriouil.s
+    dhkjdfiodsufildsopfyil
     
+</p>
+</div>
 </body>
 </html>
